fix width of home_video that was too large for moz nav

--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -26,7 +26,7 @@
 
 
 .home_video {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     position: absolute;
     display: flex;
